tests/snapshots/test_runner__tests__compiler__typecheck__enum_2__enum_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
class List<Element> = Nil | Cons { current: Element, next: List<Element> }

entry
  let foo = \Cons {
    current = 1,
    next = Cons {
      current = true,
      next = ()
      //     ^^ Expected Int, got ()
    }
  } -> 0;
  ()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/enum_2/enum_2.kk:8:14
  │
8 │       next = ()
  │              ^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - List<Int>   | + ()        |
    +---------------+-------------+
